--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.2.0",
+    "@react-three/drei": "^7.5.0",
+    "@react-three/fiber": "^7.0.6",
     "contentful": "^8.5.0",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "three": "^0.132.2"
   },
   "devDependencies": {
     "@types/node": "^16.7.2",
