--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
     "@react-three/drei": "^7.5.0",
     "@react-three/fiber": "^7.0.6",
     "contentful": "^8.5.0",
+    "d3": "^7.0.1",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.3.1",
     "three": "^0.132.2"
   },
   "devDependencies": {
+    "@types/d3": "^7.0.0",
     "@types/node": "^16.7.2",
     "@types/react": "^17.0.19",
     "@types/styled-components": "^5.1.13",
+    "add": "^2.0.6",
     "babel-plugin-styled-components": "^1.13.2",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "yarn": "^1.22.11"
   }
 }
