--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@react-three/drei": "^7.5.0",
     "@react-three/fiber": "^7.0.6",
     "contentful": "^8.5.0",
-    "d3": "^7.0.1",
+    "d3": "^6.6.0",
+    "d3-request": "^1.0.6",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -21,7 +22,7 @@
     "three": "^0.132.2"
   },
   "devDependencies": {
-    "@types/d3": "^7.0.0",
+    "@types/d3": "^6.3.0",
     "@types/node": "^16.7.2",
     "@types/react": "^17.0.19",
     "@types/styled-components": "^5.1.13",
