--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "contentful": "^8.5.0",
     "d3": "^6.6.0",
     "d3-request": "^1.0.6",
+    "highcharts": "^10.2.0",
+    "highcharts-react-official": "^3.1.0",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "^3.39.1",
     "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.3.1",
     "three": "^0.132.2"
