--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.2.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.13",
+    "@nivo/bar": "^0.80.0",
+    "@nivo/core": "^0.80.0",
+    "@nivo/geo": "^0.80.0",
+    "@nivo/line": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
     "@react-three/drei": "^7.5.0",
     "@react-three/fiber": "^7.0.6",
     "contentful": "^8.5.0",
@@ -18,7 +27,9 @@
     "highcharts-react-official": "^3.1.0",
     "next": "12.2.2",
     "react": "17.0.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
+    "react-pro-sidebar": "^0.7.1",
     "react-query": "^3.39.1",
     "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.3.1",
