--- a/package.json
+++ b/package.json
@@ -20,29 +20,53 @@
     "@nivo/pie": "^0.80.0",
     "@react-three/drei": "^7.5.0",
     "@react-three/fiber": "^7.0.6",
+    "@studio-freight/lenis": "^0.2.28",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/three": "^0.139.0",
+    "@types/webgi": "https://storage.googleapis.com/dist.pixotronics.com/webgi/runtime/bundle-types-0.5.5.tgz",
     "contentful": "^8.5.0",
     "d3": "^6.6.0",
     "d3-request": "^1.0.6",
+    "framer-motion": "^10.12.16",
+    "gsap": "^3.11.4",
     "highcharts": "^10.2.0",
     "highcharts-react-official": "^3.1.0",
+    "maath": "^0.6.0",
     "next": "12.2.2",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^8.0.1",
     "react": "17.0.2",
+    "react-color": "^2.19.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
     "react-pro-sidebar": "^0.7.1",
     "react-query": "^3.39.1",
     "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.3.1",
-    "three": "^0.132.2"
+    "three": "^0.132.2",
+    "valtio": "^1.10.5",
+    "web-vitals": "^2.1.4",
+    "webgi": "https://storage.googleapis.com/dist.pixotronics.com/webgi/runtime/bundle-0.5.8.tgz"
   },
   "devDependencies": {
     "@types/d3": "^6.3.0",
     "@types/node": "^16.7.2",
     "@types/react": "^17.0.19",
+    "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.13",
+    "@types/three": "^0.139.0",
+    "@types/webgi": "https://storage.googleapis.com/dist.pixotronics.com/webgi/runtime/bundle-types-0.5.5.tgz",
     "add": "^2.0.6",
+    "autoprefixer": "^10.4.14",
     "babel-plugin-styled-components": "^1.13.2",
+    "cross-env": "^7.0.3",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.4.2",
+    "webgi": "https://storage.googleapis.com/dist.pixotronics.com/webgi/runtime/bundle-0.5.5.tgz",
     "yarn": "^1.22.11"
   }
 }
